erDiagram
  RESTAURANT_TABLES ||--o{ ORDERS : seats
  EMPLOYEES |o--o{ ORDERS : "placed by"
  EMPLOYEES ||--o{ REFRESH_TOKENS : "authenticates via"

  CITIES ||--o{ NEIGHBORHOODS : contains
  NEIGHBORHOODS ||--o{ CUSTOMER_ADDRESSES : "delivery zone for"
  CUSTOMERS ||--o{ CUSTOMER_ADDRESSES : owns
  CUSTOMERS |o--o{ ORDERS : "placed by (customer)"
  CUSTOMER_ADDRESSES |o--o{ ORDERS : "delivered to"

  CATEGORIES ||--o{ PRODUCTS : contains
  PRODUCTS ||--o{ PRODUCT_SIZES : "priced as"
  PRODUCTS ||--o{ PRODUCT_DRINK_FLAVORS : offers
  DRINK_FLAVORS ||--o{ PRODUCT_DRINK_FLAVORS : "offered by"

  PIZZA_GROUPS ||--o{ PIZZA_GROUP_SIZES : prices
  PIZZA_SIZES ||--o{ PIZZA_GROUP_SIZES : "priced in"
  PIZZA_GROUPS ||--o{ PIZZA_GROUP_FLAVORS : offers
  PIZZA_FLAVORS ||--o{ PIZZA_GROUP_FLAVORS : "offered by"

  ORDERS ||--o{ ORDER_ITEMS : has
  ORDERS ||--o{ ORDER_PAYMENTS : "settled by"
  PRODUCTS ||--o{ ORDER_ITEMS : ordered_as
  PRODUCT_SIZES ||--o{ ORDER_ITEMS : sized_as
  DRINK_FLAVORS ||--o{ ORDER_ITEMS : chosen_as
  PIZZA_GROUPS ||--o{ ORDER_ITEMS : grouped_as
  PIZZA_SIZES ||--o{ ORDER_ITEMS : sized_as
  PIZZA_FLAVORS ||--o{ ORDER_ITEMS : "single flavor of"
  ORDER_ITEMS ||--o{ ORDER_ITEM_FLAVORS : includes
  PIZZA_FLAVORS ||--o{ ORDER_ITEM_FLAVORS : chosen_in
  ORDERS ||--o{ PRINT_JOBS : "printed as"

  CASH_FLOW ||--o{ CASH_EXPENSES : records

  RESTAURANT_TABLES {
    int id PK
    int number "unique, > 0. numbered 1..N with no gaps - N is the restaurant's current table count, admin-adjustable via tableService.increase/decreaseTableCount, not a fixed 1-9"
    text status "free or busy, derived from open orders"
  }

  EMPLOYEES {
    int id PK
    text name
    text picture_url "nullable"
    int is_active "default 1. soft delete - false instead of removing the row"
    text role "'staff' or 'admin', default 'staff'"
    text password_hash "nullable. bcrypt hash - only 'admin' rows ever carry one, see authService.login"
  }

  REFRESH_TOKENS {
    int id PK
    int employee_id FK
    text token_hash "sha256 of the raw refresh token cookie - only the hash is ever stored"
    text expires_at
    text revoked_at "nullable. set on logout or rotation (refresh is single-use)"
    text created_at
  }

  CITIES {
    int id PK
    text name
    text department "nullable"
    text country "default 'Colombia'"
  }

  NEIGHBORHOODS {
    int id PK
    text name
    int city_id FK
    int delivery_fee "integer COP. suggests a new delivery order's fee unless explicitly overridden - see orderService.createOrder"
  }

  %% No auth required to create/update (routes/customers.ts) - staff entering
  %% a walk-in/calling customer's details, not a public-facing account
  %% system. Only DELETE is admin-gated. Also backed by an FTS5 virtual table
  %% (customers_fts, trigram-tokenized over name/phone, kept in sync via
  %% triggers) powering the order form's fuzzy autocomplete - not modeled
  %% here since it's a search index mirror, not a domain entity.
  CUSTOMERS {
    int id PK
    text name
    text phone "nullable"
    text email "nullable"
    text created_at
  }

  CUSTOMER_ADDRESSES {
    int id PK
    int customer_id FK
    text street_address
    text property_type "HOUSE, APARTMENT, OFFICE, BUILDING, or OTHER - only HOUSE/APARTMENT are exposed in the order form for now"
    int neighborhood_id FK
    text apartment_number "nullable"
    text tower "nullable"
    text building_name "nullable. free text, autocompleted from prior entries in the same neighborhood - not a managed table"
    text reference "nullable"
    real latitude "nullable. no maps/geocoding integration yet, reserved for one later"
    real longitude "nullable"
    text google_place_id "nullable"
    text formatted_address "nullable"
    text created_at
  }

  CATEGORIES {
    int id PK
    text key "stable id, e.g. appetizers, drinks. not 'pizzas'"
    text name
  }
  %% Also backed by an FTS5 virtual table (products_fts, trigram-tokenized
  %% over name/description, kept in sync via triggers) powering
  %% menuService.searchProducts (/menu/search, the "Todos" tab's search bar)
  %% - not modeled here since it's a search index mirror, not a domain
  %% entity. Same setup as CUSTOMERS' customers_fts below.
  PRODUCTS {
    int id PK
    int category_id FK
    text key "stable id within category, e.g. fancaccia"
    text name
    text description "nullable"
    int price "nullable. null when priced via PRODUCT_SIZES (e.g. calzone)"
    int is_available
    int requires_pizza_flavor "bool. true for gratin, calzone"
  }
  PRODUCT_SIZES {
    int id PK
    int product_id FK
    text key "e.g. small, large"
    text name
    int price
  }
  %% Shared/reusable across products, same spirit as PIZZA_FLAVORS below - a
  %% flavor like "Coca-Cola" is one row that both Gaseosa 1.5L and Gaseosa
  %% Personal offer, not duplicated per product (that was the old
  %% PRODUCT_OPTIONS shape, replaced by this + PRODUCT_DRINK_FLAVORS). No
  %% price impact.
  DRINK_FLAVORS {
    int id PK
    text key "unique, e.g. coca_cola"
    text name "e.g. Coca-Cola, Poker"
  }
  PRODUCT_DRINK_FLAVORS {
    int product_id PK, FK
    int flavor_id PK, FK
  }

  PIZZA_GROUPS {
    int id PK
    text key "classic or special"
    text name
  }
  PIZZA_SIZES {
    int id PK
    text key "slice, personal, small, medium, large, xlarge"
    text name
    int slices
    int max_flavors
  }
  PIZZA_GROUP_SIZES {
    int id PK
    int group_id FK
    int size_id FK
    int price "nullable. null for 'slice' in current menu data"
  }
  PIZZA_FLAVORS {
    int id PK
    text key
    text name
    text description "nullable"
    int extra_cost
    int is_available
  }
  PIZZA_GROUP_FLAVORS {
    int group_id PK, FK
    int flavor_id PK, FK
  }

  ORDERS {
    int id PK
    text order_type "dine_in, takeaway, delivery"
    text status "PENDING, PRINTING, ACTIVE, COMPLETED"
    int employee_id FK "nullable in the DB (kept for old rows), but required by validation on every new order - see orderService.validateOrderRequest"
    int table_number "nullable. dine_in only, > 0 - must be one of RESTAURANT_TABLES.number's current values (tableService.tableExists), no fixed upper bound. Editable after creation by an admin (orderService.updateOrderTable)"
    int customer_id FK "nullable. required by validation (not the DB) for takeaway/delivery, optional for dine_in"
    int customer_address_id FK "nullable. required by validation for delivery only, must belong to customer_id"
    text notes "nullable. order-level comments"
    text promo_type "nullable. 'duo' or 'pizza_xl'. set once at creation, never changed - see resolvePromoItems"
    int total "sum of items only, excludes tip and delivery_fee - see grandTotal (API-level, not a column) for total+tip+delivery_fee"
    text created_at
    text completed_at "nullable. set on COMPLETED"
    int print_attempts "recovery bookkeeping, default 0"
  }
  ORDER_ITEMS {
    int id PK
    int order_id FK
    text item_type "pizza or product"
    int product_id FK "nullable. set when item_type = product"
    int product_size_id FK "nullable. set when the product is priced per size"
    int drink_flavor_id FK "nullable. set when the product has a chosen drink flavor"
    int pizza_group_id FK "nullable. set when item_type = pizza, or product requires_pizza_flavor"
    int pizza_size_id FK "nullable. set when item_type = pizza"
    int pizza_flavor_id FK "nullable. single flavor for gratin/calzone (requires_pizza_flavor products)"
    int quantity
    int unit_price "price snapshot at order time, integer COP"
    text notes "nullable. e.g. sin cebolla"
    text printed_at "nullable. set once this item's been sent to the kitchen (original ticket or addendum)"
  }
  ORDER_ITEM_FLAVORS {
    int order_item_id PK, FK
    int flavor_id PK, FK
    int portion "percent, 1-100. all rows for one order_item sum to 100"
  }

  ORDER_PAYMENTS {
    int id PK
    int order_id FK
    text method "cash, card, or transfer"
    int gross_amount "GROSS total charged via this method, integer COP - tip and delivery fee included, discount NOT subtracted. Named distinctly from ORDERS.total (items only) so the two can't be confused"
    int tip_amount "default 0. slice of gross_amount that's tip, not sales. 0 to gross_amount"
    int delivery_fee "default 0. slice of gross_amount that's delivery fee, not sales. 0 to gross_amount"
    int net_amount "products-only slice of gross_amount - tip/delivery fee excluded, discount NOT subtracted either. SUM(net_amount) across an order's splits always equals ORDERS.total exactly, server-computed at insert time"
    int discount "default 0. slice of net_amount (not gross_amount - discounts apply to products, not tip/delivery fee) this split's discount accounts for. 0 to net_amount. actual cash collected is gross_amount - discount, derived when needed"
    text created_at "written once, at completion - the ONLY place tip/delivery fee/discount are ever recorded; ORDERS.tip/deliveryFee/discount (API-level, not a column) are always 0 before this and derived by summing these rows afterward"
  }

  PRINT_JOBS {
    int id PK
    int order_id FK
    text kind "kitchen_ticket or bill"
    text content "rendered ticket text, or bill HTML"
    text created_at
  }

  CASH_REGISTER_SETTINGS {
    int id PK "always 1, single row"
    int default_opening_cash "seeds a new CASH_FLOW period"
  }
  PROMO_SETTINGS {
    text promo_type PK "'duo' or 'pizza_xl'"
    int price "admin-editable, read live by applyPromoPricing at order creation - no caching, no restart needed"
    int soda_surcharge "pizza_xl only, always 0 and unused for duo"
  }
  CASH_FLOW {
    int id PK
    text date "YYYY-MM-DD business day. one row per day, auto-opened when stale"
    int cash_in_register "current available cash for this period"
    int expenses "running total of CASH_EXPENSES for this period"
    text created_at
  }
  CASH_EXPENSES {
    int id PK
    int cash_flow_id FK
    int amount "positive integer COP"
    text justification
    text created_at
  }

  CLOSING_REPORTS {
    int id PK
    text date "YYYY-MM-DD business day this report covers"
    int order_count "COMPLETED orders that day"
    int delivery_sales "total+delivery_fee summed for delivery orders, tips/discounts excluded"
    int dine_in_takeaway_sales "total+delivery_fee summed for dine_in/takeaway orders"
    int cash_sales "grouped by ORDER_PAYMENTS.method, each row's amount - tip_amount - discount"
    int card_sales
    int transfer_sales
    int total_sales "delivery_sales + dine_in_takeaway_sales"
    int tips "sum of ORDER_PAYMENTS.tip_amount for the day, not part of total_sales"
    int discounts "sum of ORDER_PAYMENTS.discount for the day, not subtracted from total_sales"
    int items_sold "sum of ORDER_ITEMS.quantity across the day's completed orders"
    int customers_served "distinct customer_id count - the same customer ordering twice still counts once"
    int delivery_order_count
    int dine_in_order_count
    int takeaway_order_count
    int total_expenses "sum of CASH_FLOW.expenses for the day"
    text content "rendered receipt text, for reprint"
    text created_at "always a manual staff action, never auto-generated"
  }
